--- a/root/static/index.html
+++ b/root/static/index.html
@@ -20,12 +20,12 @@
     <div class="navbar navbar-fixed-top center">
         <div class="navbar-inner" >
             <div class="container-fluid" >   
-                <a class="brand" href="#">SIMCAM</a>
+                <a class="brand" href="#">simcam</a>
 
                 <ul class="nav pull-right">
-                  <li><a href="#camera">CAMERA</a></li>
-                  <li><a href="#calibration">CALIBRATION</a></li>
-                  <li><a href="#results">RESULTS</a></li>
+                  <li><a href="#camera">camera</a></li>
+                  <li><a href="#calibration">calibration</a></li>
+                  <li><a href="#results">results</a></li>
                 </ul>
             </div>
         </div>
