--- a/sim_cam/public/grid.html
+++ b/sim_cam/public/grid.html
@@ -23,38 +23,18 @@
 	<script src="js/libs/Three.js"></script>
 
     <script type="text/vertex_shader" id="grid_vertex">
-    varying vec2 vUv;
+    uniform mat4 mvp_matrix;
 
-    uniform float delta;
+    attribute vec4 a_position;
+    attribute vec2 a_st;
 
-    uniform float scale;
-
-    uniform float alpha;
-
-
-
-    void main()
-
+    varying vec2 v_st; //output 
+    void
+    main()
     {
-
-        vUv = uv;
-
-        vec3 p = position;
-
-        p.z += sin(2.0 * p.y + delta) * 5.0;
-
-        p.z += cos(2.0 * p.z + delta / 2.0) * 5.0;
-
-        p.z += cos(2.0 * p.x + delta) * 5.0;
-
-        p.x += sin(p.y + delta / 2.0) * 10.0;
-
-        vec4 mvPosition = modelViewMatrix * vec4(scale * p, 1.0 );
-
-        gl_Position = projectionMatrix * mvPosition;
-
-    } 
-
+        v_st = a_st; 
+        gl_Position = mvp_matrix * a_position;
+    }
     </script>
 
     <script type="text/frag_shader" id="grid_frag">
@@ -64,32 +44,18 @@
 
     #endif
 
-    uniform float delta;
+    uniform int u_frequency;
+    uniform vec4 u_color0;
+    uniform vec4 u_color1;
 
-    uniform float alpha;
-
-    varying vec2 vUv;        
-
-
+    varying vec2 v_st;        
 
     void main(void)
-
     {
-
-        vec2 position = vUv;
-
-        float red = 1.0;
-
-        float green = 0.25 + sin(delta) * 0.25;
-
-        float blue = 0.0;
-
-        vec3 rgb = vec3(red, green, blue);
-
-        vec4 color = vec4(rgb, alpha);
-
-            gl_FragColor = color;
-
+        vec2 texcoord = mod(floor(v_st * float(u_frequency * 2)), 2.0);
+        float delta = abs(texcoord.x - texcoord.y);
+    
+        gl_FragColor = mix( u_color1, u_color0, delta);   
     }
     </script>
 
@@ -119,11 +85,11 @@
 
     var uniforms = {
 
-      delta: {type: 'f', value: 0.0},
+      u_frequency: {type: 'i', value: 10},
 
-      scale: {type: 'f', value: 1.0},
+      u_color0: {type: 'v4', value: new THREE.Vector4( 1.0,1.0, 1.0, 1.0) },
 
-      alpha: {type: 'f', value: 1.0}
+      u_color1: {type: 'v4', value: new THREE.Vector4( 0.0, 0.0, 0.0, 1.0 ) }
 
     };
 
@@ -139,7 +105,7 @@
 
       fragmentShader: fragShader,
 
-      transparent: true
+      transparent: false
 
     });
 
@@ -164,21 +130,23 @@
 	$container.append(renderer.domElement);
 
 
-	// set up the sphere vars
-
-	var radius = 50, segments = 20, rings = 20;
-
 	// create a new mesh with sphere geometry -
 	// we will cover the sphereMaterial next!
 
-	var sphere = new THREE.Mesh(
-	   new THREE.SphereGeometry(radius, segments, rings),
-	   grid_material);
+	var cube = new THREE.Mesh(
+         new THREE.CubeGeometry( 100, 100, 5 ),
+//    new THREE.MeshLambertMaterial( { color: 0xFF0000 } )
+	   grid_material
+    );
 
-
+var cube2 = new THREE.Mesh(
+    new THREE.CubeGeometry( 5, 5, 5 ),
+    new THREE.MeshLambertMaterial( { color: 0xFF0000 } )
+);
+scene.add( cube2 );
 
 	// add the sphere to the scene
-	scene.add(sphere);
+	scene.add(cube);
 
 
 	// and the camera
