--- a/sim_cam/public/index.html
+++ b/sim_cam/public/index.html
@@ -159,6 +159,8 @@
         <script type="text/javascript"> 
             $('[rel="popover"]').popover({ html : "true" });
         </script>
+        <script type="text/javascript">
+        </script>
 
     </body>
 </html>
