Adding route for simulate

--- a/sim_cam/public/index.html
+++ b/sim_cam/public/index.html
@@ -127,7 +127,7 @@
               <input class="span2"data-camera="p_z" placeholder="" id="prependedInput" type="text">
             </div>
             <p class="help-block">Position of the camera</p>
-          </div>
+          <div>
 
         </div>
     </fieldset>
