--- a/sim_cam/public/index.html
+++ b/sim_cam/public/index.html
@@ -146,8 +146,8 @@
         <div class="page-header">
             <h1>Environment <small>Select the environment</small></h1>
        </div>
-        <div class="row"> 
-            <div class="offset9 span3 well">
+        <div class="row" id="environ_form"> 
+           <div class="span3 well">
                 <h2>Selecting an Environment</h2>
                 <p>
                   Your camera reacts differently to environmental condition. Consider noise, light, and distortion parameters.  
@@ -183,11 +183,55 @@
             <p class="help-block">Strength of Noise</p>
           </div>
         </div>
-
+    <div class="control-group">
+          <!-- Text input-->
+          <label class="control-label" for="input01">Distortion Parameters</label>
+          <div class="controls">
+           <div class="input-prepend">
+              <span class="add-on">R1</span>
+              <input class="span2" placeholder="0.00" name="r1" type="text">
+            </div>
+           <div class="input-prepend">
+              <span class="add-on">R2</span>
+              <input class="span2" placeholder="0.00" name="r2" type="text">
+            </div>
+           <div class="input-prepend">
+              <span class="add-on">R3</span>
+              <input class="span2" placeholder="0.00" name="r3" type="text">
+            </div>
+           <div class="input-prepend">
+              <span class="add-on">T1</span>
+              <input class="span2" placeholder="0.00" name="t1" type="text">
+            </div>
+           <div class="input-prepend">
+              <span class="add-on">T2</span>
+              <input class="span2" placeholder="0.00" name="t2" type="text">
+            </div>
+            <p class="help-block">Apply Radio and Tangential Distortions to Camera</p>
+          </div>
+        </div>
     </fieldset>
   </form>
         
             </div>
+            <div class="span7 well" >
+                <h2>Noise</h2>
+                <div id="noise_image">
+                    <img id="noiseless" src="img/noiseless.png" />
+                    <img id="nosefull" src="img/noisefull.png" />
+                </div>
+                <h2>Distortion</h2>
+                <div id="distortion_image">
+                    <img id="distort" src="img/distort.png" />
+                    <img id="distorted" src="img/distroted.png" />
+                </div>
+                <h2>Combined</h2>
+                <div id="combined_image">
+                    <img id="start" src="img/distort.png" />
+                    <img id="finish" src="img/distroted.png" />
+                </div>
+            </div>
+ 
         </div>
         </section>
          <section id="Calibration">
@@ -241,58 +285,13 @@
         <script type="text/javascript"> 
             $('[rel="popover"]').popover({ html : "true" });
         </script>
+        <script type="text/javascript" src="js/views/camera_view.js"> </script>
         <script type="text/javascript">
 
-        var camera_view = Backbone.View.extend({
-            initialize: function(options) {
-                var m = Backbone.Model.extend({ }); 
-                this.model = new m({
-                    u: 400, v: 320, fov: 35, ar: 400/320,
-                    near: .4, far: 10000, p_x: -15, p_y: 10, p_z: 15
+        var environ_form  = new Backbone.View.extend({
 
-                }); 
-
-                $.each( this.model.attributes, function( i, a ) { $('[data-camera="'+i+'"]').val( a ); } );
-                this.render();
-            },
-            events : {
-                'change input' : 'update',
-            },
-            render : function() {
-             
-            var c = $(this.el).find('#cam_canvas');
-            if( this.renderer ) { delete this.renderer; } 
-            this.renderer = new THREE.WebGLRenderer();
-            this.renderer.setSize( this.model.get('u'), this.model.get('v') );
-            c.html( this.renderer.domElement );
-
-            var scene = new THREE.Scene();
-            var camera = new THREE.PerspectiveCamera(
-                this.model.get('fov'),         // Field of view
-                this.model.get('ar'),  // Aspect ratio
-                this.model.get('near'),         // Near
-                this.model.get('far')      // Far
-                );
-            camera.position.set( this.model.get('p_x'), this.model.get('p_y'), this.model.get('p_z') );
-            camera.lookAt( scene.position );
-            scene.add( camera );
-            var cube = new THREE.Mesh(
-                    new THREE.CubeGeometry( 5, 5, 5 ),
-                    new THREE.MeshLambertMaterial( { color: 0xFF0000 } )
-                    );
-            scene.add( cube );
-
-            var light = new THREE.PointLight( 0xFFFF00 );
-            light.position.set( 10, 0, 10 );
-            scene.add( light );
-            this.renderer.render(scene, camera);
-            },
-            update : function(e) {
-                var input = $(e.currentTarget);
-                this.model.set( input.attr('data-camera'), input.val() );
-                this.render();
-            }
         });
+
 
         var view = Backbone.View.extend({
             initialize: function(options) {
