--- a/sim_cam/public/index.html
+++ b/sim_cam/public/index.html
@@ -185,7 +185,7 @@
         </div>
     <div class="control-group">
           <!-- Text input-->
-          <label class="control-label" for="input01">Distortion Parameters</label>
+          <label class="control-label" for="input01">Radial Distortion Parameters</label>
           <div class="controls">
            <div class="input-prepend">
               <span class="add-on">R1</span>
@@ -199,6 +199,14 @@
               <span class="add-on">R3</span>
               <input class="span2" placeholder="0.00" name="r3" type="text">
             </div>
+            <p class="help-block">Apply Radial Distortions to Camera</p>
+          </div>
+        </div>
+
+    <div class="control-group">
+          <!-- Text input-->
+          <label class="control-label" for="input01">Tangential Distortion Parameters</label>
+          <div class="controls">
            <div class="input-prepend">
               <span class="add-on">T1</span>
               <input class="span2" placeholder="0.00" name="t1" type="text">
@@ -207,7 +215,7 @@
               <span class="add-on">T2</span>
               <input class="span2" placeholder="0.00" name="t2" type="text">
             </div>
-            <p class="help-block">Apply Radio and Tangential Distortions to Camera</p>
+            <p class="help-block">Apply Tangential Distortions to Camera</p>
           </div>
         </div>
     </fieldset>
