--- a/sim_cam/public/index.html
+++ b/sim_cam/public/index.html
@@ -32,11 +32,9 @@
             <p class="lead">Simulation <a href="#" class="" rel="popover" data-content="popover stuff" data-original-title="Todo">for</a> camera calibration.</p>
         <div class="subnav">
             <ul class="nav nav-pills">
-              <li><a href="#getting_started">Getting Started</a></li>
-              <li><a href="#environment">Environment</a></li>
-              <li><a href="#calibration">Calibration</a></li>
-              <li><a href="#results">Results</a></li>
-              <li><a href="#review">Review</a></li>
+              <li><a href="index.html">Getting Started</a></li>
+              <li><a href="calibrate.html">Calibration</a></li>
+              <li><a href="Registration.html">Registration</a></li>
             </ul>
           </div>
         </header>
@@ -243,31 +241,14 @@
  
         </div>
         </section>
-         <section id="Calibration">
+         <section id="Finish">
         <div class="page-header">
             <h1>Calibration <small>Place the checkerboards</small></h1>
        </div>
         <div class="row"> 
-            <div class="offset9 span3 well">
-                <h2>Place the Calibration Checkboards</h2>
-                <p>
-                  To calibrate the camera, checkerboards are placed within the view of the camera.  
-                </p>
-                
-            </div>
-        </div>
-        </section>
-        <section id="results">
-        <div class="page-header">
-            <h1>Results <small>Compare and view results from calibration</small></h1>
-       </div>
-        <div class="row"> 
-            <div class="offset9 span3 well">
-                <h2>Selecting an Environment</h2>
-                <p>
-                  Your camera reacts differently to environmental condition. Consider noise, light, and distortion parameters.  
-                </p>
-                
+            <div class="span12 well">
+                <h2>Save the Camera</h2>
+                <input type="submit" id="submit" class="btn btn-primary" />
             </div>
         </div>
         </section>
