--- a/sim_cam/public/index.html
+++ b/sim_cam/public/index.html
@@ -256,6 +256,21 @@
 
     </div>
 
+        <style type="text/template" id="modal_template">
+<div class="modal hide" >
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3><%-header%></h3>
+  </div>
+  <div class="modal-body">
+    <p><%-message%></p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-primary">Save changes</a>
+  </div>
+</div>
+      </style>
   
         <!-- Javascript -->
         <script type="text/javascript" src="js/libs/jquery.min.js">        </script>
@@ -295,6 +310,7 @@
             initialize: function( options) {
                 this.model = camera_model;
                 this.model.bind('change', this.change_camera, this );
+                this.render();
 
             },
             events : {
@@ -317,7 +333,6 @@
                     var noise = $(that.el).find('#distorted');
                     if( res.get('success')  === 1 )
                        {
-                        console.log( res );
                        noise.attr('src', res.get('out') );
                        }
                 }});
@@ -327,7 +342,6 @@
                     var noise = $(that.el).find('#finish');
                     if( res.get('success')  === 1 )
                        {
-                        console.log( res );
                        noise.attr('src', res.get('out') );
                        }
                 }});
@@ -365,14 +379,26 @@
 
             },
             events : {
-              
+                'click #submit' : 'save_camera'   
             },
-            change_camera : function() {
-            }
+            save_camera: function() {
 
+                console.log('asdsa');
+                camera_model.url = '/save';
+                camera_model.save( {}, {
+                    success: function( res ) {
+                        var template = $('#modal_template').html();
+                        var modal_t = _.template( template, { message :'Saved to:'+res.id, head: 'saved'} );
+                         var modal = $(modal_t);
+                          $(this.el).append( modal );
+                          modal.modal('show');
+                     
+                    }
+                });
+            }
         });
 
-        var main_view = new view();
+        var main_view = new view( {el : $('body') });
         </script>
 
     </body>
